[tool.poetry]
name = "rca-toy"
version = "0.1.0"
description = "Root cause analysis using LLMs"
authors = ["Syen Park <syen.park@connect.ust.hk>"]
packages = [{ include = "src"}]
readme = "README.md"

[tool.poetry.scripts]
repository = "src.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.19.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"
pre-commit = "^4.3.0"
pre-commit-hooks = "^6.0.0"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
extend-exclude = ["template/**"]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D107", "ISC001"]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"migrations/**" = ["INP001"]
"tests/**" = ["S101"]
